<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment">

    <TextView android:id="@+id/Intro"
        android:text="@string/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/tv_a"
        android:text="@string/a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Intro"   />

    <EditText android:id="@+id/et_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_a"
        android:inputType="numberSigned|numberDecimal" />

    <TextView android:id="@+id/tv_b"
        android:text="@string/b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_a"    />

    <EditText android:id="@+id/et_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_b"
        android:inputType="numberSigned|numberDecimal" />

    <TextView android:id="@+id/tv_c"
        android:text="@string/c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_b"    />

    <EditText android:id="@+id/et_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_c"
        android:inputType="numberSigned|numberDecimal" />

    <Button android:id="@+id/btn_calc"
        android:text="@string/calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_c"    />

    <TextView android:id="@+id/tv_x1"
        android:text="@string/tv_x1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_calc"/>

    <TextView android:id="@+id/tv_x1_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_x1"   />

    <TextView android:id="@+id/tv_x2"
        android:text="@string/tv_x2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_x1_calc"/>

    <TextView android:id="@+id/tv_x2_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_x2"/>

</RelativeLayout>
